Update workflow branch name

--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -7,12 +7,14 @@ on:
       - "v*"
     branches:
       - "master"
+      - "main"
       - "dev/*"
       - "feat/*"
       - "fix/*"
   pull_request:
     branches:
       - "master"
+      - "main"
 
 env:
   module_id: bsevents
